fix (jeu): correction de bugs et amélioration de la fluidité du jeu